--- a/class_telecomando/class_telecomando.csproj
+++ b/class_telecomando/class_telecomando.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class_telecomando.cs" />
+    <Compile Include="Class_televisore.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
