--- a/class_telecomando/class_telecomando.csproj
+++ b/class_telecomando/class_telecomando.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class_Caldaia.cs" />
     <Compile Include="Class_telecomando.cs" />
     <Compile Include="Class_televisore.cs" />
+    <Compile Include="Class_termostato.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
